miniextendr-macros/tests/ui_vctrs/derive_vctrs_missing_class_attr.stderr
error: #[derive(Vctrs)] requires #[vctrs(class = "name")] attribute
 --> tests/ui_vctrs/derive_vctrs_missing_class_attr.rs:6:1
  |
6 | / struct Bad {
7 | |     x: f64,
8 | | }
  | |_^
